charts/pihole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
spec:
  parentRefs:
    - name: http-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - pihole.g4v.dev
  rules:
    - backendRefs:
        - name: pihole-web
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
